...
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:descendantFocusability="blocksDescendants">

    <TextView
        android:id="@+id/gequ_liuxing_listview_geming"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:text="歌名"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center_vertical"
        android:layout_marginStart="25dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/gequ_liuxing_listview_geshou"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="歌手"
        android:textSize="15sp"
        android:layout_marginBottom="5dp"
        android:textColor="#919191"
...
