...
        android:layout_marginStart="4dp"
        android:layout_marginBottom="92dp"
        app:layout_constraintTop_toBottomOf="@id/test_text"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/fazhufu_fason"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginTop="116dp"
        android:background="@drawable/fanzhufu_btn"
        android:text="发表"
        android:textColor="#fff"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fabianzhufu" />

    <TextView
...
